# app-tiketo-pass-manager

./: .gitignore  Dockerfile  LICENSE.md  README.md  configSchema.json  pyproject.toml
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  configSchema.json  configuration_description.md  documentationUrl.md  licenseUrl.md  sourceCodeUrl.md
data/: config.json
data/in/tables/: passes.csv
scripts/: run_local.sh
scripts/developer_portal/: fn_actions_md_update.sh  update_properties.sh
src/: component.py  tiketo_client.py
tests/: test_component.py
