[project]
name = "tiketo-pass-manager"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flake8>=7.2.0",
    "keboola-component>=1.6.10",
    "mock>=5.2.0",
    "requests>=2.31.0",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
